--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "gittaku",
-  "version": "2.3.6",
+  "version": "2.6.290",
   "description": "Taku CLI: Project generator and utility for the Taku framework.",
   "bin": {
     "taku": "./cli.js"
   },
+  "scripts": {
+    "build": "pkg . --out-path ./dist --targets node16-linux-x64,node16-macos-x64,node16-win-x64",
+    "prepublishOnly": "yarn build",  // Run build before publishing
+    "prepare": "yarn build",  // Optional: Run build before both publishing and when installing from Git
+    "start": "node cli.js"  // Optional: For testing locally
+  },
+  "type": "module",
   "author": "Donald Moore @imgnx <donaldwaynemoorejr@gmail.com>",
   "license": "0BSD",
   "repository": {
@@ -17,5 +24,11 @@
     "framework",
     "project-generator"
   ],
-  "packageManager": "yarn@4.9.2"
+  "packageManager": "yarn@4.9.2",
+  "dependencies": {
+    "pkg": "^5.8.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
