--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "gittaku",
-  "version": "2.6.291",
+  "version": "2.6.299",
   "description": "Taku CLI: Project generator and utility for the Taku framework.",
   "bin": {
-    "taku": "./cli.js"
+    "taku": "./dist/src/cli.js"
   },
   "scripts": {
-    "build": "esbuild cli.js --bundle --platform=node --outfile=dist/cli.js --format=esm --packages=external && esbuild src/taku.config.parse.js --bundle --platform=node --outfile=dist/taku.config.parse.js --format=esm --packages=external",
+    "build": "esbuild src/cli.js --bundle --platform=node --outfile=dist/src/cli.js --format=esm --packages=external && esbuild src/taku.config.parse.js --bundle --platform=node --outfile=dist/src/taku.config.parse.js --format=esm --packages=external",
     "prepublishOnly": "yarn build",
     "prepare": "yarn build",
     "start": "node dist/cli.js"
@@ -26,8 +26,8 @@
   ],
   "packageManager": "yarn@4.9.2",
   "dependencies": {
-    "fs-extra": "^11.3.0",
-    "pkg": "^5.8.0"
+    "chalk": "^5.4.1",
+    "fs-extra": "^11.3.0"
   },
   "engines": {
     "node": ">=16.0.0"
